--- a/src/layouts/components/global/Footer.astro
+++ b/src/layouts/components/global/Footer.astro
@@ -17,6 +17,7 @@ footerDescription = footerDescription || t("footer.description");
 const copyrightText = copyright.text || t("footer.copyright");
 const copyrightParts = splitProtectedText(copyrightText);
 const privacyPolicyLabel = t("footer.privacyPolicy") as string;
+const servingClientsLabel = t("footer.servingClientsWorldwide") as string;
 const privacyPolicyUrl = getLocaleUrlCTM(
   "/privacy-policy",
   Astro.currentLocale,
@@ -102,6 +103,13 @@ const encodedEmail = encodeEmail(contact.email);
               <li class="inline-block text-white/82">
                 {contact.location}
               </li>
+              {
+                servingClientsLabel && (
+                  <li class="inline-block text-white/72">
+                    {servingClientsLabel}
+                  </li>
+                )
+              }
             </ul>
           </div>
         </div>
