--- a/src/layouts/components/global/Head.astro
+++ b/src/layouts/components/global/Head.astro
@@ -34,6 +34,12 @@ const fontVariables = fontsJson.map((font) => font.cssVariable) as any[];
   <meta name="generator" content={Astro.generator} />
   <link
     rel="preload"
+    href={config.site.logo}
+    as="image"
+    fetchpriority="high"
+  />
+  <link
+    rel="preload"
     href="/images/hero/gold-fill.webp"
     as="image"
     type="image/webp"
